1.2.2b5:
    Core:
    * Checks can now omit the typical "OK - " or "WARN -". This text
      will be added automatically if missing.

    livestatus:
    * FIX: possible crash with VERY long downtime comments

1.2.2b4:
    Core:
    * FIX: Fix output of cmk -D: datasource programs were missing
    * FIX: allow unicode encoded extra_service_conf
    * FIX: no default PING service if custom checks are defined
    * FIX: check_mk_base: fixed rounding error in get_bytes_human_readable
    * FIX: check_mk: improved support of utf-8 characters in extra_service_conf
    * FIX: livestatus: table statehist now able to check AuthUser permissions
    * New configuration variable contactgroup_members

    Checks & Agents:
    * FIX: smart - not trying to parse unhandled lines to prevent errors
    * FIX: WATO configuration of filesystem trends: it's hours, not days!
    * FIX: winperf_processor - fixed wrong calculations of usage
    * FIX: mysql: fixed crash on computing IO information
    * FIX: diskstat: fix local variable 'ios_per_sec' referenced before assignment
    * FIX: multipath: ignore warning messages in agent due to invalid multipath.conf
    * FIX: megaraid_bbu: deal with broken output ("Adpater"), found in Open-E
    * FIX: megaraid_pdisk: deal with special output of Open-E
    * FIX: jolokia_metrics.mem: renamed parameter totalheap to total
    * FIX: check_ldap: added missing host address (check didn't work at all)
    * FIX: check_ldap: added missing version option -2, -3, -3 -T (TLS)
    * FIX: mssql: Agent plugin now supports MSSQL Server 2012
    * FIX: hr_mem: fix max value in performance data (thanks to Michaël COQUARD)
    * FIX: f5_bigip_psu: fix inventory function (returned list instead of tuple)
    * FIX: mysql.connections: avoid crash on legacy agent output
    * FIX: tcp_conn_stats: use /proc/net/tcp instead of netstat -tn. This
           should avoid massive performance problems on system with many
           connections