@@ -241,15 +241,15 @@ void TableHosts::addColumns(Table *table, string prefix, int indirect_offset)
     table->addColumn(new HostContactsColumn(prefix + "contacts",
                 "A list of all contacts of this host, either direct or via a contact group", indirect_offset));
     table->addColumn(new DownCommColumn(prefix + "downtimes",
-                "A list of the ids of all scheduled downtimes of this host", indirect_offset, true, false, false));
+                "A list of the ids of all scheduled downtimes of this host", indirect_offset, true, false, false, false));
     table->addColumn(new DownCommColumn(prefix + "downtimes_with_info",
-                "A list of the all scheduled downtimes of the host with id, author and comment", indirect_offset, true, true, false));
+                "A list of the all scheduled downtimes of the host with id, author and comment", indirect_offset, true, false, true, false));
     table->addColumn(new DownCommColumn(prefix + "comments",
-                "A list of the ids of all comments of this host", indirect_offset, false, false, false));
+                "A list of the ids of all comments of this host", indirect_offset, false, false, false, false));
     table->addColumn(new DownCommColumn(prefix + "comments_with_info",
-                "A list of all comments of the host with id, author and comment", indirect_offset, false, true, false));
+                "A list of all comments of the host with id, author and comment", indirect_offset, false, false, true, false));
     table->addColumn(new DownCommColumn(prefix + "comments_with_extra_info",
-                "A list of all comments of the host with id, author, comment, entry type and entry time", indirect_offset, false, true, true));
+                "A list of all comments of the host with id, author, comment, entry type and entry time", indirect_offset, false, false, true, true));
 
     table->addColumn(new CustomVarsColumn(prefix + "custom_variable_names",
                 "A list of the names of all custom variables", (char *)(&hst.custom_variables) - ref, indirect_offset, CVT_VARNAMES));
