@@ -339,15 +339,15 @@ void TableServices::addColumns(Table *table, string prefix, int indirect_offset,
     table->addColumn(new ServiceContactsColumn(prefix + "contacts",
                 "A list of all contacts of the service, either direct or via a contact group", indirect_offset));
     table->addColumn(new DownCommColumn(prefix + "downtimes",
-                "A list of all downtime ids of the service", indirect_offset, true, false, false));
+                "A list of all downtime ids of the service", indirect_offset, true, true, false, false));
     table->addColumn(new DownCommColumn(prefix + "downtimes_with_info",
-                "A list of all downtimes of the service with id, author and comment", indirect_offset, true, true, false));
+                "A list of all downtimes of the service with id, author and comment", indirect_offset, true, true, true, false));
     table->addColumn(new DownCommColumn(prefix + "comments",
-                "A list of all comment ids of the service", indirect_offset, false, false, false));
+                "A list of all comment ids of the service", indirect_offset, false, true, false, false));
     table->addColumn(new DownCommColumn(prefix + "comments_with_info",
-                "A list of all comments of the service with id, author and comment", indirect_offset, false, true, false));
+                "A list of all comments of the service with id, author and comment", indirect_offset, false, true, true, false));
     table->addColumn(new DownCommColumn(prefix + "comments_with_extra_info",
-                    "A list of all comments of the service with id, author, comment, entry type and entry time", indirect_offset, false, true, true));
+                "A list of all comments of the service with id, author, comment, entry type and entry time", indirect_offset, false, true, true, true));
 
     if (add_hosts)
         g_table_hosts->addColumns(this, "host_", (char *)(&svc.host_ptr) - ref);
